--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,10 +5,14 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_additem">Add Entry</string>
-	<string name="Add_Entry">Add Entry</string>
-	<string name="Delete_First_Entry">Delete First Entry</string>
-	<string name="hello">Hello</string>
-	<string name="Save">Save</string>
-	<string name="Back">Back</string>
-	<string name="Add_Text">Add Text</string>
+    <string name="Add_Entry">Add Entry</string>
+    <string name="Delete_First_Entry">Delete First</string>
+    <string name="hello">Hello</string>
+    <string name="Save">Save</string>
+    <string name="Back">Back</string>
+    <string name="Add_Text">Add Text</string>
+    <string name="title_activity_diaplay_item">DiaplayItemActivity</string>
+    <string name="Delete">Delete</string>
+    <string name="Edit">Edit</string>
+
 </resources>
